[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "A real-world data cleaning environment for AI agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pandas",
    "openenv-core",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"