[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data-cleaning-env"
version = "0.1.0"
description = "Data Cleaning environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pandas>=1.3.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "data_cleaning_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["data_cleaning_env", "data_cleaning_env.server"]
package-dir = { "data_cleaning_env" = ".", "data_cleaning_env.server" = "server" }